--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,32 @@ body{
 }
 
 header{
-   padding-left: 10%;
-   padding-right: 10%; 
-   justify-content: center;
+    background: rgba(0,0,0,7);
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
+nav{
+    float:left
+}
+nav ul{
+    list-style: none;
+    overflow: hidden;
+}
+nav ul li{
+    float: left;
+    font-family: Arial, sans-serif;
+    font-smooth: 16px;
+}
+nav ul li a{
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;    
+}
+nav ul li:hover{
+    background-color: #90af56;
 }
 
 .encabezado{
@@ -45,7 +68,7 @@ display: block;
     flex-wrap: wrap;
     flex-direction:row;
     justify-content:space-evenly;
-    align-items: center;       
+    align-items: right;       
     border-radius: 75%;
 }
 
