--- a/src/style.css
+++ b/src/style.css
@@ -6,18 +6,36 @@ body{
     box-sizing: border-box;
     font-family: sans-serif;
     background: rgb(60, 61, 61);
-    color: #90af56;
+   color:#fff;
+}
+
+.borde-superior{
+    height: 10px;
+border-top-left-radius: 1000%;
+border-top-right-radius: 1000%;
+}
+
+.borde-inferior{
+    height: 10px;
+    border-bottom-left-radius: 1000%;
+    border-bottom-right-radius: 1000%;
+}
+h2{
+  color: #90af56;
 }
 
 header{
-    background: rgba(0,0,0,7);
+    background: rgb(40, 151, 95);
     width: 100%;
     position: fixed;
     z-index: 100;
+
 }
 
+
+
 nav{
-    float:left
+    float:left    
 }
 nav ul{
     list-style: none;
@@ -31,34 +49,110 @@ nav ul li{
 nav ul li a{
     display: block;
     padding: 10px;
-    color: #fff;
+    color: #90af56;
+
     text-decoration: none;    
 }
 nav ul li:hover{
-    background-color: #90af56;
+    background-color: rgb(60, 61, 61);
+    border-radius: 50%;
 }
 
 .encabezado{
+    color: #90af56;
     background: rgba(40, 151, 96, 0.575);
     align-items: center;
-    padding: 15%;
+    padding: 5%;
     display: flex;
     flex-wrap: wrap;
-    border-radius: 75%;
-    margin: 10px;
+    border-end-start-radius: 70%;
+    border-bottom-right-radius: 70%;
+    margin:0;
+}
+
+.encabezado h2{
 }
 
 .descripcion{
+    color: #fff;
     width: 100%;
     justify-content: center;
 }
 
 main{
-padding-left: 10%;
-padding-right: 10%;
-padding-bottom: 10%;
+    position: block;
+padding: 5%;
 display: block;
 }
+
+main hr{
+margin:0px;
+height: 5px;
+border-style: none;
+background-color: #90af56;
+}
+
+.hitos{
+margin:0;
+    display: flex;
+flex-direction: column;
+justify-content: space-around;
+justify-content: center;
+background-color: rgba(40, 151, 96, 0.575); 
+
+}
+
+.hitos h2{
+    margin: 10px;
+}
+.hitos details summary{
+margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: left;
+color: rgb(60, 61, 61);
+/* Organizar contenido  */    
+}
+
+.hitos details p{
+     margin: 20px;
+}
+
+.hitos details img{
+    margin: 20px;
+}
+
+.hitos details hr{
+    background-color: rgb(70, 48, 16);    
+    height: 10px;
+    border-style: none;
+    margin-left: 10px ;
+    margin-right: 10px ;
+    border-radius: 1000%;
+}
+
+.hitos .borde-superior-h{
+    background-color: rgb(255, 255, 255);    
+    height: 1px;
+    border-style: none;
+    margin-left: 10px ;
+    margin-right: 10px ;
+    border-bottom-right-radius: 1000%;
+    border-bottom-left-radius: 1000%;
+    border-top-right-radius: 1000%;
+    
+}
+.hitos .borde-inferior-h{
+    background-color: rgb(70, 48, 16);    
+    height: 10px;
+    border-style: none;
+    margin-left: 10px ;
+    margin-right: 10px ;
+    margin-bottom: 10px;
+    border-radius: 1000%;
+}
+    
+/*
 
 .menu{
     background: rgba(40, 151, 96, 0.575); 
@@ -80,21 +174,4 @@ display: block;
     height: 10vh;
     font-size: 2vh;
 }
-
-.hitos-h{
-margin: 20px;
-display: flex;
-flex-direction: column;
-justify-content:space-around;
-justify-content: center;
-
-}
-
-.hitos-h ol{
-display: block;
-/* Organizar contenido  */    
-}
-
-.hitos-h ol li{
-    margin: 25px;
-}
+*/
